--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p>I love hiking and I'm so grateful Rexburg is close to Yellowstone and the Tetons! I also like to get in the gym to lift and play basketball.</p>
     <p>I'm studying computer science, but I love being active and am really social so I've been thinking of switching my major but it's all up in the air right now!</p>
     <p>my new test paragraph</p>
+    <p> my new new</p>
 </body>
 </html>
