--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -23,13 +23,13 @@
     <p>To give people information on our white water rafting tours. We are availabe to allow people to book appointments, view 
         previous rafting trips, and become informed about our company. Our goal is to persuade visitors to choose our company 
         for white water rafting over other companies out there. We will do this by displaying a gallery of the average white
-        water rafting tour, showcasing our amazing employees, and exaplaining why we are the best option. 
+        water rafting tour, showcasing our amazing employees, and explaining why we are the best option. 
     </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Adrenaline junkies who love to go on adventures! Targeting a range of ages, but particularly 12-45. Our tours are intense, and although we have
-        beginner courses, we are targetting the more advanced and skilled adventurers.
+    <p>Our audience is adrenaline junkies who love to go on adventures! Targeting a range of ages, but particularly 12-45. Our 
+        tours are intense, and although we have beginner tours, we are targetting the more advanced and skilled adventurers.
     </p>
     <!-- change this -->
 
