--- a/wireframe.html
+++ b/wireframe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><img src="https:/loremflickr.com/50/50" alt='random image'> </a>
+        <a href="#"><img src="https://loremflickr.com/50/50" alt='random image'> </a>
         <nav>
             <a href="#">Home</a>
             <a href="#">Page 1</a>
@@ -33,7 +33,7 @@
                 <p>banner information 3</p>
             </section>
         </div>
-        <article id="product gallery">
+        <article id="product-gallery">
             <section>
                 <img src="https://loremflickr.com/150/150" alt="random image">
                 <h4>Product text 1</h4>
@@ -91,9 +91,9 @@
             <p>info</p>
         </div>
         <div class="social-media">
-            <a href="https://facebook.com"><img src="https://loremflickr.com/30/30"></a>
-            <a href="https://instagram.com"><img src="https://loremflickr.com/30/30"></a>
-            <a href="https://twitter.com"><img src="https://loremflickr.com/30/30"></a>
+            <a href="https://facebook.com"><img src="https://loremflickr.com/30/30" alt = "facebook"></a>
+            <a href="https://instagram.com"><img src="https://loremflickr.com/30/30" alt = 'instagram'></a>
+            <a href="https://twitter.com"><img src="https://loremflickr.com/30/30" alt = 'twitter'></a>
         </div>
     </footer>
 
