--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="portal.css" rel="stylesheet">
     <title>WDD130 | HOME</title>
 </head>
+<div id = 'content'>
 <body>
-    <nav>
+    <header>
+    <nav id="primary">
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>  
+    </header>
     <h1>Ella Patten</h1>
-    <img src="mypic.jpg" alt="Image of me" width="475" height="500">
-    <p>I love hiking and I'm so grateful Rexburg is close to Yellowstone and the Tetons! I also like to get in the gym to lift and play basketball.</p>
+
+    <div class="image"><img src="mypic.jpg" alt="Image of me"></div>
+    <p class="background">I love hiking and I'm so grateful Rexburg is close to Yellowstone and the Tetons! I also like to get in the gym to lift and play basketball.</p>
     <p>I'm studying computer science, but I love being active and am really social so I've been thinking of switching my major but it's all up in the air right now!</p>
-    <p>my new test paragraph</p>
+    <p class="background">my new test paragraph</p>
     <p> my new nes</p>
+    <footer>
+        <p class="footer">WDD130- 2023</p>
+    </footer>
 </body>
+</div>
 </html>
