--- a/wwr/index.html
+++ b/wwr/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting | Aquaventures | Home</title>
 </head>
 <body>
+    <div id="content">
     <header>
-        <a  id = "logo-link" href="index.html"><img src="images/AquaVentures-logos.jpeg" alt="logo" width="50"></a>
+        <a  id = "logo-link" href="index.html"><img class="logo" src="images/AquaVentures-logos.jpeg" alt="logo" ></a>
         <nav>
             <a href= 'index.html'>Home</a>
             <a href="#">Page 2</a>
@@ -30,19 +32,20 @@
         <main class="home-grid">
                 <section class="rivers-card">
                     <img class="card-img" src="images/rivers.jpg" alt = "river in forest">
-                    <img class="icon" src="images/river_icon.png" alt="river icon" width="70">
+                    <img class="icon" src="images/river_icon.png" alt="river icon">
                     <h2>Rivers</h2>
                 </section>
                 <section class="camping-card">
                     <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-                    <img class="icon" src="images/fire_icon.png" alt="fire icon" width="70">
+                    <img class="icon" src="images/fire_icon.png" alt="fire icon" >
                     <h2>Camping</h2>
                 </section>
                 <section class="rapids-card">
                     <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-                    <img class="icon" src="images/oars.png" alt="oars icon" width="70">
+                    <img class="icon" src="images/oars.png" alt="oars icon">
                     <h2>Rapids</h2>
                 </section>
+                <div id = 'background'></div>
                 <img class="mountains" src="images/mountains.jpg" alt="Misty mountians">
                 <section class="msg">
                     <h2>More Than Just The Thrill</h2>
@@ -55,17 +58,17 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target = "_blank">
                 <img src="images/facebook.png" alt="fb icon" width="30">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target = "_blank">
                 <img src="images/twitter.png" alt="twitter icon" width="30">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target = "_blank">
                 <img src="images/instagram.png" alt="instagram icon" width="30">
             </a>
         </div>
     </footer>
-    
+    </div>
 </body>
 </html>
