--- a/PersonalSite/site-plan-personal.html
+++ b/PersonalSite/site-plan-personal.html
@@ -20,16 +20,17 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To give people information on our white water rafting tours. We are availabe to allow people to book appointments, view 
-        previous rafting trips, and become informed about our company. Our goal is to persuade visitors to choose our company 
-        for white water rafting over other companies out there. We will do this by displaying a gallery of the average white
-        water rafting tour, showcasing our amazing employees, and explaining why we are the best option. 
+    <p>To inform people about the NBA Nuggets Basketball team. My website has pictures, highlights, news, and statistics to showcase 
+      the multiple facets of the Nuggets team. Used as somewhat of a fanpage, people can come here to read about the latest happenings
+      with the Nuggets. I build from the ground up, so if people don't know what the Nuggets are all about, they can find out from 
+      my website!
     </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Our audience is adrenaline junkies who love to go on adventures! Targeting a range of ages, but particularly 12-45. Our 
-        tours are intense, and although we have beginner tours, we are targetting the more advanced and skilled adventurers.
+    <p>My audience ranges everwhere from people who have been nuggets fans for years to those who are just starting to get into
+      NBA basketball and following the Nuggets. To target all audiences my website will have everything from basic news and player names
+      to last years and previous game stats. 
     </p>
     <!-- change this -->
 
@@ -37,7 +38,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/AquaVentures-logos.jpeg" alt="Logo image" />
+    <img src="nougetlogo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -48,8 +49,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/palette/e7cebe-ddbea9-c7987f-c5c9ce-b8c1cc-9ca8b6-c2c5bc-a5a58d-6b705c"
-      target="_blank">https://coolors.co/palette/e7cebe-ddbea9-c7987f-c5c9ce-b8c1cc-9ca8b6-c2c5bc-a5a58d-6b705c</a>
+    <a href="https://coolors.co/000000-f4f5f6-f7bf25-5c3537-0d213f"
+      target="_blank">https://coolors.co/000000-f4f5f6-f7bf25-5c3537-0d213f</a>
 
     <table class="colors">
       <tr>
@@ -60,10 +61,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#250800]</td>
-        <td class="secondary">[#C06759]</td>
-        <td class="accent1">[#638BA3]</td>
-        <td class="accent2">[#C95B1D]</td>
+        <td class="primary">[#5C3537]</td>
+        <td class="secondary">[#F7BF25]</td>
+        <td class="accent1">[#0D213F]</td>
+        <td class="accent2">[#F4F5F6]</td>
       </tr>
     </table>
 
@@ -73,26 +74,20 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Cinzel
+      Heading Font: <h4 id="grad">Graduate</h4>
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Arima
+      Paragraph Font: <p>Kelly Slab</p>
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce in lacinia ligula. Nullam tincidunt scelerisque justo et facilisis. Sed finibus, mauris nec iaculis elementum, diam neque dapibus ipsum, ut suscipit urna ligula eu diam. Aliquam erat volutpat. Sed tortor arcu, venenatis sit amet tincidunt in, aliquam sed enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris vitae pharetra odio. Mauris rhoncus arcu ut molestie placerat. Morbi ornare in felis sed tincidunt. Donec in dui dictum, facilisis arcu cursus, iaculis nibh. Donec eu rutrum est, quis dictum ipsum.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
-      Trips vary from mild and great for families, to trips exclusively for
-      physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, AquaVenture can make it
-      happen for you.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce in lacinia ligula. Nullam tincidunt scelerisque justo et facilisis. Sed finibus, mauris nec iaculis elementum, diam neque dapibus ipsum, ut suscipit urna ligula eu diam. Aliquam erat volutpat. Sed tortor arcu, venenatis sit amet tincidunt in, aliquam sed enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris vitae pharetra odio. Mauris rhoncus arcu ut molestie placerat. Morbi ornare in felis sed tincidunt.
     </p>
 
     <!-- ------------------------Step 13------------------------------ -->
