--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -125,8 +125,10 @@
     <h3>Home</h3>
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <h3>Rivers</h3>
+    <img src="images/wireframe.png" alt = "Rivers page wireframe">
 
-    <h3>Gallery</h3>
+    
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
