--- a/PersonalSite/site-plan-personal.html
+++ b/PersonalSite/site-plan-personal.html
@@ -104,24 +104,417 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        Gallery
+        Roster
         <!-- this page will have a name later -->
       </div>
-      <div class="sm-page3">Contact Us</div>
+      <div class="sm-page3">News</div>
 
       <div class="top">&nbsp;</div>
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
     </div>
     <hr />
+    <h2>Content</h2>
+    <img src="images/braun0.png" alt="Braun">
+    <p>
+      Name: Christian Braun
+      Number: 0
+      Position: G
+      Age: 22
+      Height 6'6"
+      College: Kansas
+    </p>
+    <p>
+      <b>Last seasons stats(2022-23 Regular Season):</b>
+      Games played: 76
+      PPG: 4.7
+      Min: 15.5
+      Reb: 2.4
+      AST: 0.8
+      STL: 0.5
+      BLK: 0.2
+    </p>
+    <p>
+      Career stats
+      Points: 400
+      FG%: 48.9
+      3P%: 34
+    </p>
+    <img src="images/mpj1.png" alt="MPJ">
+    <p>
+      Name: Michael Porter Jr.
+      Number: 1
+      Position: SF
+      Age: 25
+      Height 6'10"
+      College: Missouri
+    </p>
+    
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Games played: 62
+      PPG: 17.4
+      Min: 29
+      Reb: 5.5
+      AST: 1
+      STL: 0.6
+      BLK: 0.5
+    </p>
+    <p>
+      Career stats
+      Points: 2897
+      FG%: 50.3
+      3P%: 41.4
+    </p>
+    <img src="images/strawther3.png" alt="Strawther">
+    <p>
+      Name: Julian Strawther
+      Number: 3
+      Position: G
+      Age: 21
+      Height 6'6"
+      College: Gonzaga
+    </p>
+    <p>
+      N/A - first year playing NBA
+    </p>
+
+    <img src="images/tyson4.png" alt="Tyson">
+    <p>
+      Name: Hunter Tyson
+      Number: 4
+      Position: F
+      Age: 23
+      Height 6'8"
+      College: Clemson
+    </p>
+    <p>
+      N/A - first year playing NBA
+    </p>
+    <img src="images/caldwell-pope5.png" alt="Caldwell-Pope">
+    <p>
+      Name: Kentavious Caldwell-Pope
+      Number: 5
+      Position: SG
+      Age: 30
+      Height 6'5"
+      College: Georgia
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Games played: 76
+      PPG: 10.8
+      Min: 31.3
+      Reb: 2.7
+      AST: 2.4
+      STL: 1.5
+      BLK: 0.5
+    </p>
+    <p>
+      Career stats
+      Points: 8782
+      FG%: 42.5
+      3P%: 36.6
+    </p>
+    <img src="images/dejordan6.png" alt="DeJordan">
+    <p>
+      Name: DeAndre Jordan
+      Number: 6
+      Position: C
+      Age: 35
+      Height 6'11"
+      College: Texas A&M
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Games played: 39
+      PPG: 5.1
+      Min: 15
+      Reb: 5.2
+      AST: 0.9
+      STL: 0.3
+      BLK: 0.6
+    </p>
+    <p>
+      Career stats
+      Points: 9132
+      FG%: 67.5
+      3P%: 15.4
+    </p>
+    <img src="images/jackson7.png" alt="Jackson">
+    <p>
+      Name: Reggie Jackson
+      Number: 7
+      Position: PG
+      Age: 33
+      Height 6'2"
+      College: Boston College
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Games played: 16
+      PPG: 17.4
+      Min: 29
+      Reb: 5.5
+      AST: 1
+      STL: 0.6
+      BLK: 0.5
+    </p>
+    <p>
+      Career stats
+      Points: 9911
+      FG%: 42.3
+      3P%: 34.4
+    </p>
+    <img src="images/watson8.png" alt="Watson">
+    <p>
+      Name: Peyton Watson
+      Number: 8
+      Position: F
+      Age: 21
+      Height 6'7"
+      College: UCLA
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Games played: 23
+      PPG: 3.3
+      Min: 8.1
+      Reb: 1.6
+      AST: 0.5
+      STL: 0.1
+      BLK: 0.5
+    </p>
+    <p>
+      Career stats
+      Points: 113
+      FG%: 53.6
+      3P%: 40
+    </p>
+    <img src="images/holiday9.png" alt="Holiday">
+    <p>
+      Name: Justin Holiday
+      Number: 9
+      Position: SF
+      Age: 34
+      Height 6'6"
+      College: Washington
+    </p>
+    <p>
+      First season with the Nuggets
+    </p>
+    <p>
+      Career stats
+      Points: 5213
+      FG%: 39.7
+      3P%: 36.3
+    </p>
+    <img src="images/key11.png" alt="Key">
+    <p>
+      Name: Braxton Key
+      Number: 11
+      Position: F
+      Age: 26
+      Height 6'8"
+      College: Virginia
+    </p>
+    <p>
+      First season with Nuggets
+    </p>
+    <p>
+      Career stats
+      Points: 85
+      FG%: 45.5
+      3P%: 27.3
+    </p>
+    <img src="images/jokic15.png" alt="Jokic">
+    <p>
+      Name: Nikola Jokic
+      Number: 15
+      Position: C
+      Age: 28
+      Height 6'11"
+      College: --
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Games played: 69
+      PPG: 24.5
+      Min: 33.7
+      Reb: 11.8
+      AST: 9.8
+      STL: 1.3
+      BLK: 0.7
+    </p>
+    <p>
+      Career stats
+      Points: 12185
+      FG%: 55.4
+      3P%: 34.8
+    </p>
+
+    <img src="images/gillespie21.png" alt="Gillespie">
+    <p>
+      Name: Collin Gillespie
+      Number: 21
+      Position: G
+      Age: 24
+      Height 6'1"
+      College: Villanova
+    </p>
+    <p>
+      First season in NBA
+    </p>
+
+    <img src="images/nnaji22.png" alt="Nnaji">
+    <p>
+      Name: Zeke Nnaji
+      Number: 22
+      Position: PF
+      Age: 22
+      Height 6'9"
+      College: Arizona
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Games played: 53
+      PPG: 5.2
+      Min: 13.7
+      Reb: 2.6
+      AST: 0.3
+      STL: 0.3
+      BLK: 0.4
+    </p>
+    <p>
+      Career stats
+      Points: 709
+      FG%: 52.7
+      3P%: 38
+    </p>
+    <img src="images/picett24.png" alt="Pickett">
+    <p>
+      Name: Jalen Pickett
+      Number: 24
+      Position: G
+      Age: 24
+      Height 6'2"
+      College: Siena
+    </p>
+    <p>
+      First Season in NBA
+    </p>
+    <img src="images/murray27.png" alt="Murray">
+    <p>
+      Name: Jamal Murray
+      Number: 27
+      Position: PG
+      Age: 26
+      Height 6'4"
+      College: Kentucky
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Points: 65
+      PPG: 20
+      Min: 32.8
+      Reb: 4
+      AST: 6.2
+      STL: 1.0
+      BLK: 0.2
+    </p>
+    <p>
+      Career stats
+      Points: 7031
+      FG%: 44.7
+      3P%: 37.4
+    </p>
+    <img src="images/huff34.png" alt="Huff">
+    <p>
+      Name: Jay Huff
+      Number: 34
+      Position: C
+      Age: 26
+      Height 7'1"
+      College: Virginia
+    </p>
+    <p>
+      First year with Nuggets
+    </p>
+    <p>
+      Career stats
+      Points: 51
+      FG%: 53.6
+      3P%: 42.9
+    </p>
+    <img src="images/cancar31.png" alt="Cancar">
+    <p>
+      Name: Vlatko Cancar
+      Number: 31
+      Position: SF
+      Age: 26
+      Height 6'8"
+      College: --
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Points: 60
+      PPG: 5
+      Min: 214.8
+      Reb: 2.1
+      AST: 1.3
+      STL: 0.4
+      BLK: 0.2
+    </p>
+    <p>
+      Career stats
+      Points: 461
+      FG%: 47.9
+      3P%: 36.1
+    </p>
+    <img src="images/gordon50.png" alt="Gordon">
+    <p>      
+      Name: Aaron Gordon
+      Number: 50
+      Position: PF
+      Age: 28
+      Height 6'8"
+      College: Arizona
+    </p>
+    <p>
+      Last seasons stats(2022-23 Regular Season):
+      Points: 68
+      PPG: 16.3
+      Min: 30.2
+      Reb: 6.6
+      AST: 3
+      STL: 0.8
+      BLK: 0.8
+    </p>
+    <p>
+      Career stats
+      Points: 8055
+      FG%: 47.3
+      3P%: 32.4
+    </p>
+
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="images/home_wireframe.png" alt="home page wireframe" />
 
-    <h3>Gallery</h3>
+    <h3>Roster</h3>
+
+    <img src="images/roster_wireframe.png" alt="roster wireframe" />
+
+    <h3>News</h3>
+
+    <img src="images/news_wireframe.png" alt="news wireframe" />
+
+
+
+
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
