--- a/PersonalSite/site-plan-personal.html
+++ b/PersonalSite/site-plan-personal.html
@@ -115,6 +115,32 @@
     </div>
     <hr />
     <h2>Content</h2>
+    <strong>Home Content</strong>
+    <img src="images/mountainnuggets.png" alt="Nuggets logo with mountain background">
+    <p>Jerseys through the years</p>
+    <p>2006-2010</p>
+    <img src="images/jersey2006-2010.jpg" alt="Nuggets jersey for years 2006-2010">
+    <p>2010-2012</p>
+    <img src="images/jersey2010-2012.jpg" alt="Nuggets jersey for years 2010-2012">
+    <p>2012-2015</p>
+    <img src="images/jersey2012-2015.jpg" alt="Nuggets jersey for years 2012-2015">
+    <p>2015-2017</p>
+    <img src="images/jersey2015-2017.jpg" alt="Nuggets jersey for years 2015-2017">
+    <p>2017</p>
+    <img src="images/jersey2017.jpg" alt="Nuggets jersey for year 2017">
+    <p>2018-2020</p>
+    <img src="images/jersey2018-2020.jpg" alt="Nuggets jersey for years 2018-2020">
+    <p>2020</p>
+    <img src="images/jersey2020.jpg" alt="Nuggets jersey for year 2020">
+    <p>2021</p>
+    <img src="images/jersey2021.jpg" alt="Nuggets jersey for year 2021">
+    <p>2022</p>
+    <img src="images/jersey2022.jpg" alt="Nuggets jersey for year 2022">
+    <p>2023</p>
+    <img src="images/jersey2023.jpg" alt="Nuggets jersey for year 2023">
+    <p><strong>News Content</strong></p>
+    <a class="twitter-timeline" data-height="800" href="https://twitter.com/nuggets?ref_src=twsrc%5Etfw">Tweets by nuggets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <p><strong>Roster Content</strong></p>
     <img src="images/braun0.png" alt="Braun">
     <p>
       Name: Christian Braun
