--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Rivers</title>
 </head>
 <body>
-    
-</body>
+    <header>
+        <a  id = "logo-link" href="index.html"><img class="logo" src="images/AquaVentures-logos.jpeg" alt="logo" ></a>
+        <nav>
+            <a href= 'index.html'>Home</a>
+            <a href="rivers.html">Rivers</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+          </nav>
+    </header>
+    <div id="river_body">
+       <strong class="popular"><h1 class = 'popular'>Popular Rivers</h1></strong>
+       <p class="popular" id="text">Let Aquaventures take you!</p>
+    <img id="banner" src="images/banner.jpg" alt="river">
+    <div id="spacer"></div>
+    <h2 id="main_title">Main Fork of the Salmon River, Idaho</h2>
+    <ul id="main_para">
+        <li>Nestled deep in the Frank Church Wilderness of No Return</li> 
+        <li>Given the nickname 'The River of No Return' because of the number of folks that came to visit and fell so in love with the beauty of the river that they never left.</li>
+        <li>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted</li>
+        <li>Rapids range from class I-IV</li> 
+        <li>The water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer</li>
+        <li>Families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</ul>
+    <img id="main_img" class="rivers" src="images/main_fork.jpg" alt="Main Fork River">
+    <h2 id="deso_title">Desolation and Gray Canyon, Utah</h2>
+    <ul id="deso_para">
+        <li>Winds through some of the most desolate canyons in central Utah </li>
+        <li>Flows towards the mighty Colorado river and the sea</li>
+        <li>High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. </li>
+        <li>This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah)</li>
+        <li>Desolation is rated a Class II - III and is usually done in 6 days</li>
+        <li>Desolation Canyon has been recognized as a National Landmark</li></ul>
+    <img id="deso_img" class="rivers" src="images/desolation_river.jpg" alt="Desolation image">
+    <h2 id="grand_title">Grand Canyon, Arizona</h2>
+    <ul id="grand_para">
+        <li>This is the grand daddy of all canyons and all river trips, creating an unforgettable rafting trip</li>
+        <li>Combines world-class whitewater with breathtaking scenery </li>
+        <li>Filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river</li>
+        <li>Class I - X rapids</li>
+        <li>The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids but most people are familiar with the regular I - V river rating scale, so we often refer to both</li></ul>
+    <img id="grand_img" class = "rivers" src="images/grand_canyon_river.jpg" alt="Grand Canyon river">
+</div>
+<footer>
+    <p>Dry Oar &copy; 2023 - Ella Patten</p>
+    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
+        <a href="https://facebook.com" target = "_blank">
+            <img src="images/facebook.png" alt="fb icon" width="30">
+        </a>
+        <a href="https://twitter.com" target = "_blank">
+            <img src="images/twitter.png" alt="twitter icon" width="30">
+        </a>
+        <a href="https://instagram.com" target = "_blank">
+            <img src="images/instagram.png" alt="instagram icon" width="30">
+        </a>
+    </div>
+</footer>
+
+    </body>
 </html>
