--- a/PersonalSite/site-plan-personal.html
+++ b/PersonalSite/site-plan-personal.html
@@ -4,13 +4,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Site Plan</title>
+  <title>Nougets Site Plan</title>
   <link type="text/css" rel="stylesheet" href="styles/site-plan-personal.css" />
 </head>
 
 <body>
   <header>
-    <h1>AquaVentures Site Plan</h1>
+    <h1>Nougets Site Plan</h1>
     <h2>Ella Patten</h2>
     <h2>WDD 130-03</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
