--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,10 +12,9 @@
         <a  id = "logo-link" href="index.html"><img class="logo" src="images/AquaVentures-logos.jpeg" alt="logo" ></a>
         <nav>
             <a href= 'index.html'>Home</a>
-            <a href="#">Rivers</a>
+            <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
+         </nav>
     </header>
     <div id="hero">
         <div id="hero-box">
