--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -8,40 +8,41 @@
 </head>
 <body>
     <div id="content">
-        <header>
-            <a  id = "logo-link" href="index.html"><img class="logo" src="images/nougetlogo.png" alt="logo" ></a>
-            <nav>
+        <header id="head">
+            <div id="navbar">
                 <a href= 'index.html'>Home</a>
                 <a href="roster.html">Roster</a>
                 <a href="news.html">News</a>
              </nav>
         </header>
-        <div id="banner">
-            <img id="banner_img" src="images/mountainnuggets.png" alt="nuggets logo with mountain">
+        <main>
+        <div id="whole">
+            <h2 id="intro">FANPAGE FOR THE DENVER NUGGETS</h2>
+            <div id="center"><img id="banner_img" src="images/banner.jpg" alt="nuggets logo with mountain">
+            </div>
+            <h2 id="through">Jerseys through the years</h2>
+            <div id="jerseys">
+                <h3 class="jerseydate" class="c2023" id="d1">2023</h3>
+                <img class="jerseyimg" class="c2023" id="i1" src="images/jersey2023.jpg">
+                <h3 class="jerseydate" class="c2022" id="d2">2022</h3>
+                <img class="jerseyimg" class="c2022" id="i2" src="images/jersey2022.jpg">
+                <h3 class="jerseydate" class="c2021" id="d3">2021</h3>
+                <img class="jerseyimg" class="c2021" id="i3" src="images/jersey2021.jpg">
+                <h3 class="jerseydate" class="c2020" id="d4">2020</h3>
+                <img class="jerseyimg" class="c2020" id="i4" src="images/jersey2020.jpg">
+                <h3 class="jerseydate" class="c2018" id="d5">2018-2020</h3>
+                <img class="jerseyimg" class="c2018" id="i5" src="images/jersey2018-2020.jpg">                
+                <h3 class="jerseydate" class="c2017" id="d6">2017</h3>
+                <img class="jerseyimg" class="c2017" id="i6" src="images/jersey2017.jpg">
+                <h3 class="jerseydate" class="c2015" id="d7">2015-2017</h3>
+                <img class="jerseyimg" class="c2015" id="i7" src="images/jersey2015-2017.jpg">
+                <h3 class="jerseydate" class="c2012" id="d8">2012-2015</h3>
+                <img class="jerseyimg" class="c2012" id="i8" src="images/jersey2012-2015.jpg">
+                <h3 class="jerseydate" class="c2010" id="d9">2010-2012</h3>
+                <img class="jerseyimg" class="c2010" id="i9" src="images/jersey2010-2012.jpg">
+            </div>
         </div>
-        <div id="jerseys">
-            <h3 class="jerseydate">2006-2010</h3>
-            <img class="jerseyimg" id="2006" src="images/jersey2006-2010.jpg">
-            <h3 class="jerseydate">2010-2012</h3>
-            <img class="jerseyimg" id="2010" src="images/jersey2010-2012.jpg">
-            <h3 class="jerseydate">2012-2015</h3>
-            <img class="jerseyimg" id="2012" src="images/jersey2012-2015.jpg">
-            <h3 class="jerseydate">2015-2017</h3>
-            <img class="jerseyimg" id="2015" src="images/jersey2015-2017.jpg">
-            <h3 class="jerseydate">2017</h3>
-            <img class="jerseyimg" id="2017" src="images/jersey2017.jpg">
-            <h3 class="jerseydate">2018-2020</h3>
-            <img class="jerseyimg" id="2018" src="images/jersey2018-2020.jpg">
-            <h3 class="jerseydate">2020</h3>
-            <img class="jerseyimg" id="2020" src="images/jersey2020.jpg">
-            <h3 class="jerseydate">2021</h3>
-            <img class="jerseyimg" id="2021" src="images/jersey2021.jpg">
-            <h3 class="jerseydate">2022</h3>
-            <img class="jerseyimg" id="2022" src="images/jersey2022.jpg">
-            <h3 class="jerseydate">2023</h3>
-            <img class="jerseyimg" id="2023" src="images/jersey2023.jpg">
-        </div>
-
+        </main>
         <footer>
             <p>Nougets &copy; 2023 - Ella Patten</p>
             <p><a href="site-plan-personal.html">Site Plan</a></p>
