--- a/PersonalSite/news.html
+++ b/PersonalSite/news.html
@@ -7,13 +7,11 @@
     <title>News</title>
 </head>
 <body>
-    <header>
-        <a  id = "logo-link" href="index.html"><img class="logo" src="images/nougetlogo.png" alt="logo" ></a>
-        <nav>
+    <header id="head">
+        <div id="navbar">
             <a href= 'index.html'>Home</a>
             <a href="roster.html">Roster</a>
             <a href="news.html">News</a>
-            
          </nav>
     </header>
     <a class="twitter-timeline" data-height = "800" href="https://twitter.com/nuggets?ref_src=twsrc%5Etfw">Tweets by nuggets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
