--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -13,7 +13,7 @@
                 <a href= 'index.html'>Home</a>
                 <a href="roster.html">Roster</a>
                 <a href="news.html">News</a>
-             </nav>
+            </div>
         </header>
         <main>
         <div id="whole">
@@ -22,24 +22,24 @@
             </div>
             <h2 id="through">Jerseys through the years</h2>
             <div id="jerseys">
-                <h3 class="jerseydate" class="c2023" id="d1">2023</h3>
-                <img class="jerseyimg" class="c2023" id="i1" src="images/jersey2023.jpg">
-                <h3 class="jerseydate" class="c2022" id="d2">2022</h3>
-                <img class="jerseyimg" class="c2022" id="i2" src="images/jersey2022.jpg">
-                <h3 class="jerseydate" class="c2021" id="d3">2021</h3>
-                <img class="jerseyimg" class="c2021" id="i3" src="images/jersey2021.jpg">
-                <h3 class="jerseydate" class="c2020" id="d4">2020</h3>
-                <img class="jerseyimg" class="c2020" id="i4" src="images/jersey2020.jpg">
-                <h3 class="jerseydate" class="c2018" id="d5">2018-2020</h3>
-                <img class="jerseyimg" class="c2018" id="i5" src="images/jersey2018-2020.jpg">                
-                <h3 class="jerseydate" class="c2017" id="d6">2017</h3>
-                <img class="jerseyimg" class="c2017" id="i6" src="images/jersey2017.jpg">
-                <h3 class="jerseydate" class="c2015" id="d7">2015-2017</h3>
-                <img class="jerseyimg" class="c2015" id="i7" src="images/jersey2015-2017.jpg">
-                <h3 class="jerseydate" class="c2012" id="d8">2012-2015</h3>
-                <img class="jerseyimg" class="c2012" id="i8" src="images/jersey2012-2015.jpg">
-                <h3 class="jerseydate" class="c2010" id="d9">2010-2012</h3>
-                <img class="jerseyimg" class="c2010" id="i9" src="images/jersey2010-2012.jpg">
+                <h3 class="c2023" id="d1">2023</h3>
+                <img class="c2023" id="i1" src="images/jersey2023.jpg" alt="2023 Jersey">
+                <h3 class="c2022" id="d2">2022</h3>
+                <img class="c2022" id="i2" src="images/jersey2022.jpg" alt="2022 Jersey">
+                <h3  class="c2021" id="d3">2021</h3>
+                <img class="c2021" id="i3" src="images/jersey2021.jpg" alt="2021 Jersey">
+                <h3  class="c2020" id="d4">2020</h3>
+                <img class="c2020" id="i4" src="images/jersey2020.jpg" alt="2020 Jersey">
+                <h3  class="c2018" id="d5">2018-2020</h3>
+                <img class="c2018" id="i5" src="images/jersey2018-2020.jpg" alt="2018-2020 Jersey">                
+                <h3  class="c2017" id="d6">2017</h3>
+                <img class="c2017" id="i6" src="images/jersey2017.jpg" alt="2017 Jersey">
+                <h3  class="c2015" id="d7">2015-2017</h3>
+                <img class="c2015" id="i7" src="images/jersey2015-2017.jpg" alt="2015-2017 Jersey">
+                <h3  class="c2012" id="d8">2012-2015</h3>
+                <img class="c2012" id="i8" src="images/jersey2012-2015.jpg" alt="2012-2015 Jersey">
+                <h3 class="c2010" id="d9">2010-2012</h3>
+                <img class="c2010" id="i9" src="images/jersey2010-2012.jpg" alt="2010-2012 Jersey">
             </div>
         </div>
         </main>
